Sidebar always visualising even while collapsed bug fix

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   background: #c9a941;
 }
 
-
+/**Sidebar code********************************/
 .Sidebar {
   height: 100vh;
   width: 200px;
@@ -15,28 +15,18 @@
   background: #FFF;
 }
 
-@media only screen and (max-width: 576px) {
-    .Sidebar {
-        display: none;
-    }
-}
-
 .Sb_Top {
-  display: flex;
-  flex-direction: column;
   height: 90%;
-  justify-content: space-between;
 }
 
 #Sb_Avatar_Row {
-  align-content: center;
   height: auto;
 }
 
 #Sb_Avatar_Icon {
   margin: 0 auto;
-  height: 30%;
-  width: 30%;
+  height: 50%;
+  width: 50%;
   display: block;
   padding-bottom: 10px;
   padding-top: 10px;
@@ -47,6 +37,12 @@
   padding-right: 6%;
   padding-left: 5%;
 }
+
+.ant-layout-sider-collapsed .Sidebar{
+    display: none;
+}
+
+
 
 .char_header {
   height: 16vh;
@@ -79,6 +75,7 @@
 }
 
 .support_rank_button {
+
   width: 100%;
 }
 
